// Copyright Â© 2016 The Things Network
// Use of this source code is governed by the MIT license that can be found in the LICENSE file.

syntax = "proto3";

import "google/protobuf/empty.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

package lorawan;

message DeviceIdentifier {
  bytes  app_eui  = 1 [(gogoproto.customtype) = "github.com/TheThingsNetwork/ttn/core/types.AppEUI"];
  bytes  dev_eui  = 2 [(gogoproto.customtype) = "github.com/TheThingsNetwork/ttn/core/types.DevEUI"];
}

message Device {
  bytes  app_eui     = 1 [(gogoproto.customtype) = "github.com/TheThingsNetwork/ttn/core/types.AppEUI"];
  bytes  dev_eui     = 2 [(gogoproto.customtype) = "github.com/TheThingsNetwork/ttn/core/types.DevEUI"];
  string app_id      = 3;
  string dev_id      = 4;
  bytes  dev_addr    = 5 [(gogoproto.customtype) = "github.com/TheThingsNetwork/ttn/core/types.DevAddr"];
  bytes  nwk_s_key   = 6 [(gogoproto.customtype) = "github.com/TheThingsNetwork/ttn/core/types.NwkSKey"];
  bytes  app_s_key   = 7 [(gogoproto.customtype) = "github.com/TheThingsNetwork/ttn/core/types.AppSKey"];
  bytes  app_key     = 8 [(gogoproto.customtype) = "github.com/TheThingsNetwork/ttn/core/types.AppKey"];
  uint32 f_cnt_up    = 9;
  uint32 f_cnt_down  = 10;

  // Options
  bool   disable_f_cnt_check = 11;
  bool   uses32_bit_f_cnt    = 12;
  string activation_constraints = 13;

  // Other
  int64  last_seen = 21;
}

service DeviceManager {
  rpc GetDevice(DeviceIdentifier) returns (Device);
  rpc SetDevice(Device) returns (google.protobuf.Empty);
  rpc DeleteDevice(DeviceIdentifier) returns (google.protobuf.Empty);
}
